--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New world</title>
+    <title>西安十方电器维修有限公司</title>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
+    <meta name="Keywords" content="西安十方电器维修"/>
+    <meta name="description" content="十方电器实业维修有限公司"/>
 </head>
 <body>
     
