--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
             <a name="item"></a>
             <div class="wrapper">
                 <div class="cell">
-                    <img src="images/pic09.jpg" style="width: 100%;height: 100%;">
+                    <img src="images/pic09.jpg" style="width: 200%;height: 100%;">
                 </div>
-                <div class="cell">
-                    <img src="images/pic10.jpg" style="width: 100%;height: 100%;">
+                <div class="cell" style="overflow: hidden;">
+                    <img src="images/pic10.jpg" style="width: 200%;height: 100%;">
                 </div>
             </div>
             <div class="img"></div>
