--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="#intro">公司介绍</a></li>
                     <li><a href="#item">维修流程</a></li>
-                    <li><a href="#product">产品展示</a></li>
+                    <li><a href="#product">维修案例</a></li>
                     <li><a href="#money">收费标准</a></li>
                     <li><a href="#footer">联系我们</a></li>
                     <li class="move"></li>
