--- a/index.html
+++ b/index.html
@@ -102,31 +102,30 @@
         <section id="section-4">
 
                 <div class="mes">
-                    <p>收费标准</p>
+                    <p style="color:blue;font-size: 40px;text-align: center;">收&nbsp&nbsp费&nbsp&nbsp标&nbsp&nbsp准</p>
                     <span></span>
                     <div class="mes">
-                        <p>电路板维修收费标准</p>
+                        <p style="color: red">一&nbsp&nbsp电路板维修收费标准</p>
                         <span></span>
-                        <p>1.按电路板原售价的百分比计算：(100元以下的不计费，100元以上的器件费用单独另计费用)维修费为原电路板售价的20%-30%</p>
-                        <p>2.如电路板无法确定价格，则按电路板面积报价：(100元以下的不计费,100元以上的器件费用单独另计费用)</p>
-                        <p>(1).基本价格：按电路板面积大小计算价格：3元/平方厘米</p>
-                        <p>(2).若板为：进口版，双面原件或多层板，表面贴有涂层，带cpu，带程序，将收费增加为4-5元/平方厘米</p>
-                        <p>(3).若有好板对照或有三块以上相同基板，或板的面积虽大，但元器件少，将收费减为2-3元/平方厘米</p>
-                        <p>(4).协议报价：如长期需提供技术服务的客户且签过相关协议书，则维修价格可协商面议
-                        <li>(1).正常维修时间由报价确认后，5-7个工作日修复为标准。</li>
-                        <li>(2).加急维修时间由报价确认后，1-3天修复时间为标准，加急维修需额外加收原修理价格的20%费用</li></p>
+                        <p style="margin: 5px">1.按电路板原售价的百分比计算：(100元以下的不计费，100元以上的器件费用单独另计费用)维修费为原电路板售价的20%-30%</p>
+                        <p style="margin: 5px">2.如电路板无法确定价格，则按电路板面积报价：(100元以下的不计费,100元以上的器件费用单独另计费用)</p>
+                        <p style="margin: 5px">1)按电路板面积大小计算价格：4元/平方厘米</p>
+                        <p style="margin: 5px">2)若板为进口版，双面元件或多层板，表面贴有涂层，带程序，收费标准为4-6元/平方厘米</p>
+                        <p style="margin: 5px">3)若有好板对照或有三块以上相同基板，或板的面积虽大，但元器件少，收费标准为3-4元/平方厘米</p>
+                        <p style="margin: 5px">4)协议报价：如长期需提供技术服务的客户且签过相关协议书，则维修价格可协商面议，适当优惠
+                        <p style="margin: 5px">3.维修周期：由报价确认后，5-7个工作日修复为标准。</p>
                     </div>
                     <div class="mes">
-                        <p>变频器，直流或交流伺服器，工业电源或UPS,PLC,人机界面,触摸屏,各种电源等设备的维修收费标准</p>
+                        <p style="color: red">二&nbsp&nbsp变频器，直流或交流伺服器，工业电源或UPS,PLC,触摸屏,各种电源等设备的维修收费标准</p>
                         <span></span>
-                        <p>根据故障情况，维修难度等收费，定价为送修设备原售价的20%-30%收费</p>
+                        <p>根据故障情况，维修难度，所费工时，是否有完好设备对比，是否缺件等收费，定价为送修设备原售价的20%-30%收费。维修周期：由报价确认后，5-7个工作日修复为标准。</p>
                     </div>
                     <div class="mes">
-                        <p>其他收费标准</p>
-                        <p>1.同种型号产品维修，每次定价根据实际情况略有浮动</p>
-                        <p>2.西安市免费取送，修不好不收费</p>
-                        <p>3.外地客户可通过物流等快递公司，采用邮递所修设备形式</p>
-                        <p>4.本地取送的维修费用，在交付设备时100%一次性支付；外地客户在结清款项后寄回</p>
+                        <p style="color: red">三&nbsp&nbsp其他收费标准</p>
+                        <p style="margin: 5px">1.同种型号产品维修：每次定价根据实际情况略有浮动。</p>
+                        <p style="margin: 5px">2.西安市免费上门取送，修不好不收费</p>
+                        <p style="margin: 5px">3.外地客户可通过物流等快递公司，采用邮递所修设备形式。</p>
+                        <p style="margin: 5px">4.本地取送的维修费用，在交付设备时100%一次性支付；外地客户在结清款项后寄回</p>
                     </div>
                 </div>
             
