--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
             </div>
             <div class="icon">
                 <div>
-                    <p>移动电话:13389257671&nbsp&nbsp&nbsp&nbsp13384951535(微信)</p>
+                    <p>移动电话:&nbsp&nbsp&nbsp&nbsp13389257671</p>
                 </div>
                 <div>
-                    <p>座机:029-83287905</p>
+                    <p>13384951535（微信）</p>
                 </div>
                 <div>
                     <p>邮箱:32795146@qq.com</p>
